--- a/app/views/layouts/_static_landing_page.html.erb
+++ b/app/views/layouts/_static_landing_page.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1>Welcome to your Checklist</h1>
-  <p>Keep track of yout tasks.</p>
+  <p>Keep track of your tasks.</p>
   <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %>
   <%= link_to "Log In", new_user_session_path, class: 'btn btn-primary' %>
 </div>
